// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Flag examples DefaultInfoFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message"
    messagetype="information"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
    <button
      aria-label="close default informational flag"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples DefaultInfoFlagWithTitleComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message"
    messagetype="information"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <h4
        class="v-typography-body-2-bold"
        vtypography="body-2-bold"
      >
        Informational title
      </h4>
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
    <button
      aria-label="close informational flag with title"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples EmptyErrorFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-error"
    messagetype="error"
    v-flag=""
    v-message=""
  />
</div>
`;

exports[`Flag examples EmptyFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message"
    messagetype="information"
    v-flag=""
    v-message=""
  />
</div>
`;

exports[`Flag examples EmptySuccessFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-success"
    messagetype="success"
    v-flag=""
    v-message=""
  />
</div>
`;

exports[`Flag examples EmptyWarningFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-warning"
    messagetype="warning"
    v-flag=""
    v-message=""
  />
</div>
`;

exports[`Flag examples ErrorFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-error"
    messagetype="error"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
    <button
      aria-label="close default error flag"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples ErrorFlagWithActionButtonFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-error"
    messagetype="error"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary v-mt-8"
        type="button"
        v-button=""
        vmt="8"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="close error flag with button"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples ErrorFlagWithLinkFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-error"
    messagetype="error"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
      <a
        class="v-link"
        href="./components/flag"
        v-link=""
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="close error flag with link"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples ErrorFlagWithTitleComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-error"
    messagetype="error"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <h4
        class="v-typography-body-2-bold"
        vtypography="body-2-bold"
      >
        Error title
      </h4>
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
    <button
      aria-label="close error flag with title"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples ErrorWithoutCloseIconButtonFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-error"
    messagetype="error"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Flag examples InfoFlagWithActionButtonFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message"
    messagetype="information"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary v-mt-8"
        type="button"
        v-button=""
        vmt="8"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="close informational flag with button"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples InfoFlagWithLinkFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message"
    messagetype="information"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
      <a
        class="v-link"
        href="./components/flag"
        v-link=""
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="close informational flag with link"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples InfoWithoutCloseIconButtonFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message"
    messagetype="information"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Flag examples SuccessFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-success"
    messagetype="success"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
    <button
      aria-label="close default success flag"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples SuccessFlagWithActionButtonFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-success"
    messagetype="success"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary v-mt-8"
        type="button"
        v-button=""
        vmt="8"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="close success flag with button"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples SuccessFlagWithLinkFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-success"
    messagetype="success"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
      <a
        class="v-link"
        href="./components/flag"
        v-link=""
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="close success flag with link"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples SuccessFlagWithTitleComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-success"
    messagetype="success"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <h4
        class="v-typography-body-2-bold"
        vtypography="body-2-bold"
      >
        Success title
      </h4>
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
    <button
      aria-label="close success flag with title"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples SuccessWithoutCloseIconButtonFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-success"
    messagetype="success"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Flag examples WarningFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-warning"
    messagetype="warning"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
    <button
      aria-label="close default warning flag"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples WarningFlagWithActionButtonFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-warning"
    messagetype="warning"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary v-mt-8"
        type="button"
        v-button=""
        vmt="8"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="close warning flag with button"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples WarningFlagWithLinkFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-warning"
    messagetype="warning"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
      <a
        class="v-link"
        href="./components/flag"
        v-link=""
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="close warning flag with link"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples WarningFlagWithTitleComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-warning"
    messagetype="warning"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <h4
        class="v-typography-body-2-bold"
        vtypography="body-2-bold"
      >
        Warning title
      </h4>
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
    <button
      aria-label="close warning flag with title"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-8 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-8"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Flag examples WarningWithoutCloseIconButtonFlagComponent should render correctly 1`] = `
<div>
  <div
    class="v-flag v-message v-message-warning"
    messagetype="warning"
    v-flag=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the flag in more detail.
      </p>
    </div>
  </div>
</div>
`;
